--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "require": {
     	"php": ">=5.4.0"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Mouf\\Utils\\I18n\\Fine\\": "src/"
