--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,12 @@
     },
     "extra": {
         "mouf": {
-            "logo": "logo.png"
+            "logo": "logo.png",
+            "doc" : [{
+                    "title" : "Implementation",
+                    "url" : "doc/implementation.md"
+                }
+            ]
         }
     }
 }
